2011-04-05  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* PointsToolbox/plotaxes.m: v0.2.0

	- Add varargin to be able to pass extra arguments to the plot
	function.

2011-03-22  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* CardiacToolbox/surface_interpolation.m: v0.1.2

	- Add 'mbae' interpolation: Like the 'mba' method, but first a
	thin-plate spline is used to extrapolate values on the
	interpolation domain boundary. Then MBA is used for the local
	support interpolation of X and the boundary values set by the
	thin-plate spline.

2011-03-21  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* CardiacToolbox/scinrrd_surface_interpolation.m:

	- Remove the surface interpolation code to create new function
	CardiacToolbox/surface_interpolation.m.

	* Add CardiacToolbox/surface_interpolation.m:

	- SURFACE_INTERPOLATION Interpolate a surface from a scattered set
	of points.

	- Create this fuction from part of the code in
	CardiacToolbox/scinrrd_surface_interpolation.m. It didn't make
	sense to have all that code depending on using SCI volumes.

	* Rename CardiacToolbox/scinrrd_valve_surface.m as
	PointsToolbox/scinrrd_surface_interpolation.

	- As this is a function for general surface interpolation, it
	doesn't make much sense to give it such an specific name as
	"vale_surface".

	* README

	- First time the README file is automatically generated by
	update_README.sh. From now on, we will not point the updates in
	the ChangeLog, but they will be part of changes to the toolboxes.

	* Add update_README.sh:

	- Script to automatically extract the summary of the help headers
	of all the Matlab functions in this toolbox, and generate a README
	file.

2011-03-19  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FileFormatToolbox/scinrrd_save.m: v0.2

	- Add input argument v73, a flag to save to v7.3 format, so that
	we can save volumes larger than 2GB.

	* CardiacToolbox/scinrrd_valve_surface.m: v0.3

	- Add new otions to header file.
